# orchestra

./: .gitignore  README.md  TODO-LIST.txt  __init__.py  config.py  orchestra.py  pyproject.toml
core/: agent.py  context.py  events.py  handler.py  task.py  tools.py
examples/: example_usage.py  example_use.py
llm/: base.py  deepseek_llm.py  ollama_llm.py
tests/: mocks.py  test_agent.py  test_events_integration.py  test_llm.py  test_orchestra.py  test_routes.py  test_task.py
utils/: logger.py
