[project]
name = "orchestra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "pytest-only>=2.1.2",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "colorama>=0.4.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestra*", "core*", "llm*", "utils*"]
